Correcciones de Grid

--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
             <div class="hola">
                 <h1>Hola, soy <span class="bold">Lucas Pedemonti Desarrolador Web</span></h1>
             </div>
-            <nav><!--Etiqueta de navegacion-->
-                <ul class="navbar">
-                    <li><a class="navbar__bold" href="#">Inicio</a> <!--si quiero poner un enlace externo y que lo habra en una nueva pestaña utilizo el atributo target="_blank"dentro de la etiqueta <a href>--></li>
-                    <li><a href="./pages/sobreMi.html">Sobre mi</a></li>
-                    <li><a href="./pages/experiencia.html">Experiencia</a></li>
-                    <li><a href="./pages/clientes.html">Clientes</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
             <div>
-                <select class="lang" name="" id="">
-                    <option value="">Español</option>
-                    <option value="">Ingles</option>
-                </select>
-            </div>     
-            
+                <nav>
+                    <!--Etiqueta de navegacion-->
+                    <ul class="navbar">
+                        <li><a class="navbar__bold" href="#">Inicio</a> <!--si quiero poner un enlace externo y que lo habra en una nueva pestaña utilizo el atributo target="_blank"dentro de la etiqueta <a href>--></li>
+                        <li><a href="./pages/sobreMi.html">Sobre mi</a></li>
+                        <li><a href="./pages/experiencia.html">Experiencia</a></li>
+                        <li><a href="./pages/clientes.html">Clientes</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+                <div class="idioma">
+                    <select class="lang" name="" id="">
+                        <option value="">Español</option>
+                        <option value="">Ingles</option>
+                    </select>
+                </div>
+            </div>    
         </header> 
         <section>
             <div class="box__fixed">
-            <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="./assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
+                <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="./assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>    
         <main class="contenedormain">
