--- a/pages/sobreMi.html
+++ b/pages/sobreMi.html
@@ -9,62 +9,69 @@
     <title>Lucas Pedemonti</title>
 </head>
 <body>
-    <header><!--lo ve el usuario, indtroduccion a mi pagina-->
-        <img class="Logo" src="../images/logo.png" alt="Logo" >
-        <nav class="nav"><!--Etiqueta de navegacion-->
-            <ul>
-                <li><a class="nav__link"  href="../index.html">Inicio</a></li>
-                <li><a class="nav__link bold" href="#">Sobre mi</a></li>
-                <li><a class="nav__link" href="./experiencia.html">Experiencia</a></li>
-                <li><a class="nav__link" href="./clientes.html">Clientes</a></li>
-                <li><a class="nav__link" href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <div>
-            <select class="lang" name="" id="">
-                <option value="">Español</option>
-                <option value="">Ingles</option>
-            </select>
-        </div>     
-        <div class="hola">
-            <h1>Hola, soy <span class="bold">Lucas Pedemonti<br>Desarrolador Web</span></h1>
-        </div>        
-    </header>
+    <div class="container__grid">
+        <header class="encabezado"><!--lo ve el usuario, indtroduccion a mi pagina-->
+            <div>
+                <img class="Logo" src="../images/logo.png" alt="Logo">
+            </div>
+            <div class="hola">
+                <h1>Hola, soy <span class="bold">Lucas Pedemonti Desarrolador Web</span></h1>
+            </div>
+            <div>
+                <nav>
+                    <!--Etiqueta de navegacion-->
+                    <ul class="navbar">
+                        <li><a href="../index.html">Inicio</a> <!--si quiero poner un enlace externo y que lo habra en una nueva pestaña utilizo el atributo target="_blank"dentro de la etiqueta <a href>--></li>
+                        <li><a class="navbar__bold" href="#">Sobre mi</a></li>
+                        <li><a href="../pages/experiencia.html">Experiencia</a></li>
+                        <li><a href="../pages/clientes.html">Clientes</a></li>
+                        <li><a href="../pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+                <div class="idioma">
+                    <select class="lang" name="" id="">
+                        <option value="">Español</option>
+                        <option value="">Ingles</option>
+                    </select>
+                </div>
+            </div>    
+        </header>
         <section>
             <div class="box__fixed">
-                <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconodirecto" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
+                <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>
-    <main>
-        <section class="presentaciondos">         
-            <p>Estoy estudiando la carrera de Desarrollador Full Stack <br>en Coder House. Tambien soy estudiante en la Universidad <br> Nacional de Quilmes en la carrera de Arquitectura Naval.<br> Me gusta mucho el diseño y satifaces las necesidades <br>de los clientes. Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Quos officiis recusandae iste consequatur<br> soluta dicta non provident obcaecati laboriosam deserunt <br>molestiae distinctio ab incidunt doloremque reprehenderit <br> eum excepturi, accusantium quo. Lorem, ipsum dolor<br> sit amet consectetur adipisicing elit. Voluptates corporis<br> temporibus, numquam at laborum eum modi accusantium<br> delectus deleniti. Harum impedit magnam tenetur est aliquam<br> deleniti corrupti saepe necessitatibus velit!</p>
-            <a href="http://www.unq.edu.ar/carreras/17-arquitectura-naval.php" target="_blank">+ info sobre Arquitectura</a>
-        </section>
-        <section class="habilidades">
-            <h3>Mis habilidades</h3>
-            <ul>
-				<li>Html <img class="iconodos" src="../assets/icon/html5-line.svg" alt="html"></li><br>
-                <li>CSS<img class="iconodos" src="../assets/icon/css3-line.svg" alt="css"></li><br>
-                <li>React<img class="iconodos" src="../assets/icon/reactjs-fill.svg" alt="react"></li><br>
-                <li>Github<img class="iconodos" src="../assets/icon/github-fill.svg" alt="github"></li><br>
-                <li>Javascript<img class="iconodos" src="../assets/icon/instagram-line.svg" alt="instagram"></li><br>
-                <li>Python<img class="iconodos" src="../assets/icon/instagram-line.svg" alt="instagram"></li><br>
-        </section>
-    </main>
-    <footer>
-        <div class="contacto">
-            <ul>
-                <li><a class="contacto__redes" href="https://www.instagram.com/lucaspedemonti/?hl=en" target="_blank"><img class="icono" src="../assets/icon/instagram-line.svg" alt="instagram"></a> </li>
-                <li><a class="contacto__redes" href="https://wa.me/+5491168682017" target="_blank"><img class="icono" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a></li>
-                <li><a class="contacto__redes" href="https://github.com/"  target="_blank"><img class="icono" src="../assets/icon/github-fill.svg" alt="github"></a> </li>
-                <li><a class="contacto__redes" href="https://www.linkedin.com/" target="_blank"><img class="icono" src="../assets/icon/linkedin-line.svg" alt="linkedin"></a> </li>
-                <li><a class="contacto__redes" href="mailto:lucaspedemonti@gmail.com" target="_blank"><img class="icono" src="../assets/icon/mail-line.svg" alt="email"></a> </li>
-            </ul>  
-        </div>         
-        <div class="derechos">
-            <img class="icono" src="../assets/icon/copyright-fill.svg" alt="copyright">
-            <p> 2022- All rights Reserved.</p>
-        </div> 
-    </footer>    
+        <main class="contenedormain">
+            <section class="presentaciondos">         
+                <p>Estoy estudiando la carrera de Desarrollador Full Stack en Coder House. Tambien soy estudiante en la Universidad Nacional de Quilmes en la carrera de Arquitectura Naval. Me gusta mucho el diseño y satifaces las necesidades de los clientes. Lorem ipsum dolor sit amet consectetutr adipisicing elit. Quos officiis recusandae iste consequatur soluta dicta non provident obcaecati laboriosam deserunt molestiae distinctio ab incidunt doloremque reprehenderit  eum excepturi, accusantium quo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates corporis temporibus, numquam at laborum eum modi accusantium delectus deleniti. Harum impedit magnam tenetur est aliquam deleniti corrupti saepe necessitatibus velit!</p>
+                <a href="http://www.unq.edu.ar/carreras/17-arquitectura-naval.php" target="_blank">+ info sobre Arquitectura</a>
+            </section>
+            <section class="habilidades">
+                <h3>Mis habilidades</h3>
+                <ul>
+                    <li>Html <img class="iconodos" src="../assets/icon/html5-line.svg" alt="html"></li><br>
+                    <li>CSS<img class="iconodos" src="../assets/icon/css3-line.svg" alt="css"></li><br>
+                    <li>React<img class="iconodos" src="../assets/icon/reactjs-fill.svg" alt="react"></li><br>
+                    <li>Github<img class="iconodos" src="../assets/icon/github-fill.svg" alt="github"></li><br>
+                    <li>Javascript<img class="iconodos" src="../assets/icon/instagram-line.svg" alt="instagram"></li><br>
+                    <li>Python<img class="iconodos" src="../assets/icon/instagram-line.svg" alt="instagram"></li><br>
+            </section>
+        </main>
+        <footer>
+            <div>
+                <ul class="contacto">
+                    <li><a class="contacto__redes" href="https://www.instagram.com/lucaspedemonti/?hl=en" target="_blank"><img class="icono" src="../assets/icon/instagram-line.svg" alt="instagram"></a> </li>
+                    <li><a class="contacto__redes" href="https://wa.me/+5491168682017" target="_blank"><img class="icono" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a></li>
+                    <li><a class="contacto__redes" href="https://github.com/"  target="_blank"><img class="icono" src="../assets/icon/github-fill.svg" alt="github"></a> </li>
+                    <li><a class="contacto__redes" href="https://www.linkedin.com/" target="_blank"><img class="icono" src="../assets/icon/linkedin-line.svg" alt="linkedin"></a> </li>
+                    <li><a class="contacto__redes" href="mailto:lucaspedemonti@gmail.com" target="_blank"><img class="icono" src="../assets/icon/mail-line.svg" alt="email"></a> </li>
+                </ul>  
+            </div>         
+            <div class="derechos">
+                <img class="icono" src="../assets/icon/copyright-fill.svg" alt="copyright">
+                <p> 2022- All rights Reserved.</p>
+            </div> 
+        </footer>    
+    </div>
 </body>
 </html>
