--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,72 +6,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Lucas Pedemonti</title>
 </head>
 <body>
-    <header><!--lo ve el usuario, indtroduccion a mi pagina-->
-        <img class="Logo" src="../images/logo.png" alt="Logo" >
-        <nav class="nav"><!--Etiqueta de navegacion-->
-            <ul>
-                <li><a class="nav__link" href="../index.html">Inicio</a></li>
-                <li><a class="nav__link" href="./sobreMi.html">Sobre mi</a></li>
-                <li><a class="nav__link" href="./experiencia.html">Experiencia</a></li>
-                <li><a class="nav__link" href="./clientes.html">Clientes</a></li>
-                <li><a class="nav__link bold" href="#">Contacto</a></li>
-            </ul>
-        </nav>
-        <div>
-            <select class="lang" name="" id="">
-                <option value="">Español</option>
-                <option value="">Ingles</option>
-            </select>
-        </div>     
-        <div class="hola">
-            <h1>Hola, soy <span class="bold">Lucas Pedemonti<br>Desarrolador Web</span></h1>
-        </div>        
-    </header>
-    <section>
-        <div class="box__fixed">
-            <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconodirecto" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
-        </div>
-    </section> 
-    <main>
-        <div class="container">
-            <div class="contact-box">
-                <div class="left"></div>
-                <div class="right">
-                    <h2>Contactame</h2>
-                    <form action=""><!--etiqueta en linea-->
-                        <input type="text" class="field" placeholder="Nombre y Apellido" name="" id="" required><br> <!--placeholder es el atributo--> <!--required obliga al usuario a completar el campo-->
-                        <input type="text" class="field" placeholder="Mail" name="" id="" required><br>
-                        <input type="text" class="field" placeholder="Tema" name="" id="" required><br>
-                        <input type="text" class="field" placeholder="Escriba su mensaje aqui" name="" id="" required><br>
-                        <input type="submit" class="btn" name="" id="">
-                        <input type="reset" class="btn" value="Reset">
-                    </form>
+    <div class="container__grid">
+        <header class="conteiner fluid sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-light navegacion">
+                <div class="container-fluid">
+                <img class="Logo" src="../images/logo-removebg-preview.png"  alt="Logo">  
+                <a class="navbar-brand" href="#">Hola, soy <span class="bold">Lucas Pedemonti <br> Desarrolador Web</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../pages/sobreMi.html">Sobre mi</a>
+                    <a class="nav-link" href="../pages/experiencia.html">Experiencia</a>
+                    <a class="nav-link " href="../pages/clientes.html">Clientes</a>
+                    <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                </div>
+                <div class="idioma">
+                        <select class="lang" name="" id="">
+                            <option value="">Español</option>
+                            <option value="">Ingles</option>
+                        </select>
+                </div>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <div class="box__fixed">
+                <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
+            </div>
+        </section> 
+        <main class="mainContacto">
+            <div class="formulario">
+                <div class="contact-box">
+                    <div class="left"></div>
+                    <div class="right">
+                        <h2>Contactame</h2>
+                        <form action=""><!--etiqueta en linea-->
+                            <input type="text" class="field" placeholder="Nombre y Apellido" name="" id="" required><br> <!--placeholder es el atributo--> <!--required obliga al usuario a completar el campo-->
+                            <input type="text" class="field" placeholder="Mail" name="" id="" required><br>
+                            <input type="text" class="field" placeholder="Tema" name="" id="" required><br>
+                            <input type="text" class="field" placeholder="Escriba su mensaje aqui" name="" id="" required><br>
+                            <input type="submit" class="btn2" name="" id="">
+                            <input type="reset" class="btn2" value="Reset">
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        <section>
-            <Section >
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26306.873769448182!2d-58.51523639999999!3d-34.49377630000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb05662e4a08d%3A0x9811553c3a21048c!2sMart%C3%ADnez%2C%20Buenos%20Aires%20Province!5e0!3m2!1sen!2sar!4v1658282658582!5m2!1sen!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </Section>                               
-        </section>
-    </main>
-    <footer>
-        <div class="contactocontacto">
-            <ul>
-                <li><a class="contacto__redes" href="https://www.instagram.com/lucaspedemonti/?hl=en" target="_blank"><img class="icono" src="../assets/icon/instagram-line.svg" alt="instagram"></a> </li>
-                <li><a class="contacto__redes" href="https://wa.me/+5491168682017" target="_blank"><img class="icono" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a></li>
-                <li><a class="contacto__redes" href="https://github.com/"  target="_blank"><img class="icono" src="../assets/icon/github-fill.svg" alt="github"></a> </li>
-                <li><a class="contacto__redes" href="https://www.linkedin.com/" target="_blank"><img class="icono" src="../assets/icon/linkedin-line.svg" alt="linkedin"></a> </li>
-                <li><a class="contacto__redes" href="mailto:lucaspedemonti@gmail.com" target="_blank"><img class="icono" src="../assets/icon/mail-line.svg" alt="email"></a> </li>
-            </ul>  
-        </div>         
-        <div class="derechoscontacto">
-            <img class="icono" src="../assets/icon/copyright-fill.svg" alt="copyright">
-            <p> 2022- All rights Reserved.</p>
-        </div> 
-    </footer> 
+            <section>
+                <Section>
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26306.873769448182!2d-58.51523639999999!3d-34.49377630000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb05662e4a08d%3A0x9811553c3a21048c!2sMart%C3%ADnez%2C%20Buenos%20Aires%20Province!5e0!3m2!1sen!2sar!4v1658282658582!5m2!1sen!2sar" width="350" height="300" style="border:2;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </Section>                               
+            </section>
+        </main>
+        <footer>
+            <div >
+                <ul class="contacto">
+                    <li><a class="contacto__redes" href="https://www.instagram.com/lucaspedemonti/?hl=en" target="_blank"><img class="icono" src="../assets/icon/instagram-line.svg" alt="instagram"></a> </li>
+                    <li><a class="contacto__redes" href="https://wa.me/+5491168682017" target="_blank"><img class="icono" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a></li>
+                    <li><a class="contacto__redes" href="https://github.com/"  target="_blank"><img class="icono" src="../assets/icon/github-fill.svg" alt="github"></a> </li>
+                    <li><a class="contacto__redes" href="https://www.linkedin.com/" target="_blank"><img class="icono" src="../assets/icon/linkedin-line.svg" alt="linkedin"></a> </li>
+                    <li><a class="contacto__redes" href="mailto:lucaspedemonti@gmail.com" target="_blank"><img class="icono" src="../assets/icon/mail-line.svg" alt="email"></a> </li>
+                </ul>  
+            </div>         
+            <div class="derechos">
+                <img class="icono" src="../assets/icon/copyright-fill.svg" alt="copyright">
+                <p> 2022- All rights Reserved.</p>
+            </div> 
+        </footer> 
+    </div> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>         
+
+
 </body>
 </html>
