--- a/pages/sobreMi.html
+++ b/pages/sobreMi.html
@@ -6,35 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Lucas Pedemonti</title>
 </head>
 <body>
     <div class="container__grid">
-        <header class="encabezado"><!--lo ve el usuario, indtroduccion a mi pagina-->
-            <div>
-                <img class="Logo" src="../images/logo.png" alt="Logo">
-            </div>
-            <div class="hola">
-                <h1>Hola, soy <span class="bold">Lucas Pedemonti Desarrolador Web</span></h1>
-            </div>
-            <div>
-                <nav>
-                    <!--Etiqueta de navegacion-->
-                    <ul class="navbar">
-                        <li><a href="../index.html">Inicio</a> <!--si quiero poner un enlace externo y que lo habra en una nueva pestaña utilizo el atributo target="_blank"dentro de la etiqueta <a href>--></li>
-                        <li><a class="navbar__bold" href="#">Sobre mi</a></li>
-                        <li><a href="../pages/experiencia.html">Experiencia</a></li>
-                        <li><a href="../pages/clientes.html">Clientes</a></li>
-                        <li><a href="../pages/contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-                <div class="idioma">
-                    <select class="lang" name="" id="">
-                        <option value="">Español</option>
-                        <option value="">Ingles</option>
-                    </select>
+        <header class="conteiner fluid sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-light navegacion">
+                <div class="container-fluid">
+                <img class="Logo" src="../images/logo-removebg-preview.png"  alt="Logo">  
+                <a class="navbar-brand" href="#">Hola, soy <span class="bold">Lucas Pedemonti <br> Desarrolador Web</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#">Sobre mi</a>
+                    <a class="nav-link" href="../pages/experiencia.html">Experiencia</a>
+                    <a class="nav-link" href="../pages/clientes.html">Clientes</a>
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                 </div>
-            </div>    
+                <div class="idioma">
+                        <select class="lang" name="" id="">
+                            <option value="">Español</option>
+                            <option value="">Ingles</option>
+                        </select>
+                </div>
+                </div>
+            </nav>
         </header>
         <section>
             <div class="box__fixed">
@@ -71,7 +71,8 @@
                 <img class="icono" src="../assets/icon/copyright-fill.svg" alt="copyright">
                 <p> 2022- All rights Reserved.</p>
             </div> 
-        </footer>    
-    </div>
+        </footer>  
+    </div> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
