cambio de tamaño de imagines

--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -50,17 +50,17 @@
             </section>
             <section class="encuesta">
                 <p>¿Que servicio te interesa?</p>
-                <div>Portfolio
+                <div class="trabajos">Portfolio
                     <input type="radio" name="lado" value="portfolio">
-                    <img class="trabajos" src="../images/1631547010-portfolio4.jpg" alt="">
+                    <img  src="../images/1631547010-portfolio4.jpg" alt="">
                 </div>
-                <div>Tienda
+                <div class="trabajos">Tienda
                     <input type="radio" name="lado" value="tienda">
-                    <img class="trabajos" src="../images/og_image_AR.jpg" alt="">
+                    <img  src="../images/og_image_AR.jpg" alt="">
                 </div>
-                <div>Pagina Web
+                <div class="trabajos">Pagina Web
                     <input type="radio" name="lado" value="pagina">
-                    <img class="trabajos" src="../images/Calares2.png" alt="">
+                    <img  src="../images/Calares2.png" alt="">
                 </div>
                 <section>
                     <form action=""><!--etiqueta en linea-->
