--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://remixicon.com/">
-    <link rel="stylesheet" href="./estilos/backup.css">
+    <link rel="stylesheet" href="./sass_vivo/css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Lucas Pedemonti</title>
 </head>
@@ -48,8 +48,7 @@
             <section class="foto">
                 <div class="d-flex flex-column justify-content-center aling-items-center">
                     <img class="fotopersonal" src="./images/pexels-mati-mango-5952647-removebg.png" alt="lucasedemonti">
-                    <button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button>
-                    <a class="cv" href=""></a>
+                    <a href="https://wa.me/+5491168682017"><button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button></a>
                 </div>
             </section>
             
