modificaciones scss media querie

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="./assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>    
-        <main class="contenedormain">
-            <section class="presentacionuno">
-                <p>Soy <span class="bold">desarrollador web</span>, estoy estudiando la carrera de <span class="bold">desarrollador full stack</span>. Me gusta el diseño, crear paginas web funcionales y adaptables a las necesidades de cada cliente Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, consequuntur quis quidem fugit, sint doloremque corporis in dolorum ducimus enim vero rerum, excepturi deserunt laudantium blanditiis id quas molestias voluptatibus.</p>
+        <main class="contenedorMain">
+            <section class="presentacionUno">
+                <p>Soy <span class="bold">desarrollador web</span>, <span class="bold">futuro desarrollador full stack</span>. Me gusta el diseño, crear paginas web funcionales y adaptables a las necesidades de cada cliente. </p>
             </section>
             <section class="foto">
                 <div class="d-flex flex-column justify-content-center aling-items-center">
