--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,6 +42,7 @@
             </div>
         </section> 
         <main class="mainContacto">
+            <h1>Contactame</h1>
             <div class="formulario">
                 <div class="contact-box">
                     <div class="left"></div>
