--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -42,12 +42,11 @@
             </div>
         </section>
         <main class="experiencia">
+            <div>
+                <h1>Mi experiencia</h1>
+            </div>
             <section class="presentacionTres">
-                <p>He trabajado diez años en comercio,siendo encargado del manejo de  proveedores y clientes. Realice  proyectos relacionados a la  arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando para Desarrollador Full Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi non omnis minus porro, nesciunt beatae velit fugiat necessitatibus inventore iure a vero! Asperiores inventore cupiditate blanditiis quae animi alias necessitatibus?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos in doloribus mollitia animi omnis maiores aliquam at harum eius natus ratione sequi facere placeat, laboriosam recusandae molestiae officia rem 
-                <Section class="info">
-                    <button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button>
-                    <a class="cv" href=""></a>
-                </Section>               
+                <p>He trabajado mas de diez años en una tienda nautica, donde me desempeñe en diferentes areas. Fui encargado del manejo de proveedores, busqueda de nuevos productos para atraer nuevos clientes,y asi poder abarcar un mercado mas amplio. Tambien realice trabajos relacionados a la arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando la carrera Desarrollador Full Stack.
             </section>
             <section class="encuesta">
                 <p>¿Que servicio te interesa?</p>
