--- a/pages/sobreMi.html
+++ b/pages/sobreMi.html
@@ -41,20 +41,37 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>
-        <main class="contenedormain">
-            <section class="presentaciondos">         
-                <p>Estoy estudiando la carrera de Desarrollador Full Stack en Coder House. Tambien soy estudiante en la Universidad Nacional de Quilmes en la carrera de Arquitectura Naval. Me gusta mucho el diseño y satifaces las necesidades de los clientes. Lorem ipsum dolor sit amet consectetutr adipisicing elit. Quos officiis recusandae iste consequatur soluta dicta non provident obcaecati laboriosam deserunt molestiae distinctio ab incidunt doloremque reprehenderit  eum excepturi, accusantium quo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates corporis temporibus, numquam at laborum eum modi accusantium delectus deleniti. Harum impedit magnam tenetur est aliquam deleniti corrupti saepe necessitatibus velit!</p>
+        <main class="contenedorMain">
+            <div>
+                <h1>Sobre mi</h1>
+            </div>
+            <section class="presentacionDos">         
+                <p>Hola mi nombre es Lucas Pedemonti, naci en el año 1991 en Argentina - Provincia de Buenos Aires, en la localidad de San Isidro. Me encuentro trabajando en mi tesis para finalizar la carrera de Arquitectura Naval en la Universidad Nacional de Quilmes. Empece esta carrera en el año 2012, debibo a mi pasion por la nautica y el rio. Me destaco en el manejo de programas como Autocad, Rinhosceros, Maxsurf y SolidEdge.<br> A principios del año 2022 arranque a hacer cursos gratuitos de desarrollo web por internet en la plataforma Youtube. Luego empece a estudiar la carrera de Desarrollador Full Stack en Coder House. Estas dos carreras son muy diferentes, pero estan relacionadas mediante el diseño, realizacion de proyectos y brindar un buen servicio a nuestros clientes. Siempre me propongo nuevos desafios y vivir nuevas experiencias.</p>
                 <a href="http://www.unq.edu.ar/carreras/17-arquitectura-naval.php" target="_blank">+ info sobre Arquitectura</a>
-            </section>
-            <section class="habilidades">
+            </section>               
+            <section >
                 <h3>Mis habilidades</h3>
                 <ul>
-                    <li>Html <img class="iconodos" src="../assets/icon/html5-line.svg" alt="html"></li><br>
-                    <li>CSS<img class="iconodos" src="../assets/icon/css3-line.svg" alt="css"></li><br>
-                    <li>React<img class="iconodos" src="../assets/icon/reactjs-fill.svg" alt="react"></li><br>
-                    <li>Github<img class="iconodos" src="../assets/icon/github-fill.svg" alt="github"></li><br>
-                    <li>Javascript<img class="iconodos" src="../assets/icon/instagram-line.svg" alt="instagram"></li><br>
-                    <li>Python<img class="iconodos" src="../assets/icon/instagram-line.svg" alt="instagram"></li><br>
+                    <li>Html <img src="../assets/icon/html5-line.svg" alt="html"></li>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                      </div>                     
+                    <li>CSS<img src="../assets/icon/css3-line.svg" alt="css"></li>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    </div>                      
+                                       <li>Github<img src="../assets/icon/github-fill.svg" alt="github"></li>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    </div>
+                    <li>Javascript<img src="../assets/icon/javascript_icon_153511.svg" alt="instagram"></li>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
+                    </div>
+                     <li>React<img  src="../assets/icon/reactjs-fill.svg" alt="react"></li>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
+                    </div>
             </section>
         </main>
         <footer>
