--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,15 +41,14 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section> 
-        <main class="mainContacto">
+        <main>
             <h1>Contactame</h1>
             <div class="formulario">
                 <div class="contact-box">
                     <div class="left"></div>
                     <div class="right">
-                        <h2>Contactame</h2>
                         <form action=""><!--etiqueta en linea-->
-                            <input type="text" class="field" placeholder="Nombre y Apellido" name="" id="" required><br> <!--placeholder es el atributo--> <!--required obliga al usuario a completar el campo-->
+                            <input type="text" class="field" placeholder="Nombre y Apellido" name="" id="" required><br> 
                             <input type="text" class="field" placeholder="Mail" name="" id="" required><br>
                             <input type="text" class="field" placeholder="Tema" name="" id="" required><br>
                             <input type="text" class="field" placeholder="Escriba su mensaje aqui" name="" id="" required><br>
@@ -60,6 +59,7 @@
                 </div>
             </div>
             <section>
+                <h2>Donde me encuentro</h2>
                 <Section>
                     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26306.873769448182!2d-58.51523639999999!3d-34.49377630000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb05662e4a08d%3A0x9811553c3a21048c!2sMart%C3%ADnez%2C%20Buenos%20Aires%20Province!5e0!3m2!1sen!2sar!4v1658282658582!5m2!1sen!2sar" width="350" height="300" style="border:2;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </Section>                               
