--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -41,44 +41,46 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>  
-        <main class="contenedormainClientes">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <main >
+          <div>
+            <h1 class="Clientes">Clientes</h1>
+          </div>
+          <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="../images/rsz_1rsz_1rsz_1rsz_1rsz_221317634_1971035069804951_1143231269923769672_n.jpg" class="d-block" alt="casairiarte">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Casa Iriarte/h5>
+                  <p>Tienda Nautica</p>
                 </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="../images/rsz_1rsz_1rsz_1rsz_1rsz_221317634_1971035069804951_1143231269923769672_n.jpg" class="d-block " alt="casa iriarte">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>CASA IRIARTE</h5>
-                      <p>Tienda Nautica</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../images/rsz_2118763630_1693239470845114_2671656497114544014_n.jpg" class="d-block" alt="calares">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5></h5>
-                      <p></p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../images/rsz_11614878315967.jpg" class="d-block" alt="tomy">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5></h5>
-                      <p>Dietetica - Alimentos saludables</p>
-                    </div>
-                  </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../images/rsz_2118763630_1693239470845114_2671656497114544014_n.jpg" class="d-block" alt="calares">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Calares</h5>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+              </div>
+              <div class="carousel-item">
+                <img src="../images/rsz_11614878315967.jpg" class="d-block" alt="tomy">
+                <div class="carousel-caption d-none d-md-block">
+                  <p>Dietetica - Alimentos saludables</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </main>
         <footer>
             <div>
