arreglos anidaciones y clases

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="./assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>    
-        <main class="contenedorMain">
+        <main class="principal">
             <section class="presentacionUno">
                 <p class="animate__animated animate__fadeInLeftBig">Soy <span class="bold">desarrollador web</span>, <span class="bold">futuro desarrollador full stack</span>. Me gusta el diseño, crear paginas web funcionales y adaptables a las necesidades de cada cliente. </p>
             </section>
-            <section class="foto animate__animated animate__fadeInRightBig">
+            <section class="animate__animated animate__fadeInRightBig">
                 <div class="d-flex flex-column justify-content-center aling-items-center">
-                    <img class="fotopersonal" src="./images/pexels-mati-mango-5952647-removebg.png" alt="lucasedemonti">
+                    <img src="./images/pexels-mati-mango-5952647-removebg.png" alt="lucasedemonti">
                     <a href="https://wa.me/+5491168682017"><button type="button" class="btn btn-outline-dark" data-bs-toggle="button" autocomplete="off">Descargar CV</button></a>
                 </div>
             </section>
