--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -44,15 +44,13 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>
-        <main class="experiencia animate__animated animate__fadeInDownBig">
-            <div>
-                <h1>Mi experiencia</h1>
-            </div>
-            <section class="presentacionTres animate__animated animate__fadeInLeftBig">
-                <p>He trabajado mas de diez años en una tienda nautica, donde me desempeñe en diferentes areas. Fui encargado del manejo de proveedores, busqueda de nuevos productos para atraer nuevos clientes,y asi poder abarcar un mercado mas amplio. Tambien realice trabajos relacionados a la arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando la carrera Desarrollador Full Stack.
+        <main class="experiencia">
+            <section class="terciario">
+                <h1 class="animate__animated animate__fadeInDownBig">Mi experiencia</h1>
+                <p class="presentacionTres animate__animated animate__fadeInLeftBig">He trabajado mas de diez años en una tienda nautica, donde me desempeñe en diferentes areas. Fui encargado del manejo de proveedores, busqueda de nuevos productos para atraer nuevos clientes,y asi poder abarcar un mercado mas amplio. Tambien realice trabajos relacionados a la arquitectura naval, en la parte de diseño y cálculos estructurales. Además, me dedique  de forma freelance al diseño de planos en Autocad y modelados 3D en Rinhoceros y Maxsurf, para Astilleros y proyectos particulares. Actualmente me especializo en Desarrollo Web, y me encuentro estudiando la carrera Desarrollador Full Stack.
             </section>
             <section class="encuesta animate__animated animate__fadeInRightBig">
-                <p>¿Que servicio te interesa?</p>
+                <h2>¿Que servicio te interesa?</h2>
                 <div class="trabajos">Portfolio
                     <input type="radio" name="lado" value="portfolio">
                     <img  src="../images/portfolio.jpg" alt="">
