--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -30,7 +30,7 @@
                       <a class="nav-link active" aria-current="page" href="#">Clientes</a>
                       <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                   </div>
-                  <div class="idioma">
+                  <div>
                           <select class="lang" name="" id="">
                               <option value="">Español</option>
                               <option value="">Ingles</option>
@@ -44,9 +44,9 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>  
-        <main >
+        <main class="clientes">
           <div>
-            <h1 class="Clientes animate__animated animate__rubberBand ">Clientes</h1>
+            <h1 class="animate__animated animate__rubberBand ">Clientes</h1>
           </div>
           <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -56,9 +56,9 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../images/rsz_1rsz_1rsz_1rsz_1rsz_221317634_1971035069804951_1143231269923769672_n.jpg" class="d-block" alt="casairiarte">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Casa Iriarte/h5>
+                <img src="../images/rsz_1rsz_1rsz_1rsz_1rsz_221317634_1971035069804951_1143231269923769672_n.jpg" class="d-block " alt="casairiarte">
+                <div class="carousel-caption d-none d-md-block" >
+                  <h5>Casa Iriarte</h5>
                   <p>Tienda Nautica</p>
                 </div>
               </div>
@@ -69,7 +69,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../images/rsz_11614878315967.jpg" class="d-block" alt="tomy">
+                <img src="../images/rsz_11614878315967.jpg" class="d-block h-100" alt="tomy">
                 <div class="carousel-caption d-none d-md-block">
                   <p>Dietetica - Alimentos saludables</p>
                 </div>
