--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section> 
-        <main>
+        <main class="contactame">
             <h1>Contactame</h1>
             <div class="formulario">
                 <div class="contact-box">
