--- a/pages/sobreMi.html
+++ b/pages/sobreMi.html
@@ -44,38 +44,38 @@
                 <a href="https://wa.me/+5491168682017" target="_blank"><img class="iconowhatsapp" src="../assets/icon/whatsapp-line.svg" alt="Whatsapp"></a>
             </div>
         </section>
-        <main class="contenedorMain">
-            <div class="animate__animated animate__fadeInDownBig">
-                <h1>Sobre mi</h1>
+        <main class="secundario">
+            <div class="sobremiContenido">
+                <section class="presentacionDos animate__animated animate__fadeInLeftBig">
+                    <h1>Sobre mi</h1>         
+                    <p>Hola mi nombre es Lucas Pedemonti, naci en el año 1991 en Argentina - Provincia de Buenos Aires, en la localidad de San Isidro. Me encuentro trabajando en mi tesis para finalizar la carrera de Arquitectura Naval en la Universidad Nacional de Quilmes. Empece esta carrera en el año 2012, debibo a mi pasion por la nautica y el rio. Me destaco en el manejo de programas como Autocad, Rinhosceros, Maxsurf y SolidEdge.<br> A principios del año 2022 arranque a hacer cursos gratuitos de desarrollo web por internet en la plataforma Youtube. Luego empece a estudiar la carrera de Desarrollador Full Stack en Coder House. Estas dos carreras son muy diferentes, pero estan relacionadas mediante el diseño, realizacion de proyectos y brindar un buen servicio a nuestros clientes. Siempre me propongo nuevos desafios y vivir nuevas experiencias.</p>
+                    <a href="http://www.unq.edu.ar/carreras/17-arquitectura-naval.php" target="_blank">+ info sobre Arquitectura</a>
+                </section>               
+                <section class="habilidad animate__animated animate__fadeInRightBig">
+                    <h3>Mis habilidades</h3>
+                    <ul>
+                        <li>Html <img src="../assets/icon/html5-line.svg" alt="html"></li>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        </div>                     
+                        <li>CSS<img src="../assets/icon/css3-line.svg" alt="css"></li>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        </div>                      
+                        <li>Github<img src="../assets/icon/github-fill.svg" alt="github"></li>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                        </div>
+                        <li>Javascript<img src="../assets/icon/javascript_icon_153511.svg" alt="instagram"></li>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
+                        </div>
+                        <li>React<img  src="../assets/icon/reactjs-fill.svg" alt="react"></li>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
+                        </div>
+                </section>
             </div>
-            <section class="presentacionDos animate__animated animate__fadeInLeftBig">         
-                <p>Hola mi nombre es Lucas Pedemonti, naci en el año 1991 en Argentina - Provincia de Buenos Aires, en la localidad de San Isidro. Me encuentro trabajando en mi tesis para finalizar la carrera de Arquitectura Naval en la Universidad Nacional de Quilmes. Empece esta carrera en el año 2012, debibo a mi pasion por la nautica y el rio. Me destaco en el manejo de programas como Autocad, Rinhosceros, Maxsurf y SolidEdge.<br> A principios del año 2022 arranque a hacer cursos gratuitos de desarrollo web por internet en la plataforma Youtube. Luego empece a estudiar la carrera de Desarrollador Full Stack en Coder House. Estas dos carreras son muy diferentes, pero estan relacionadas mediante el diseño, realizacion de proyectos y brindar un buen servicio a nuestros clientes. Siempre me propongo nuevos desafios y vivir nuevas experiencias.</p>
-                <a href="http://www.unq.edu.ar/carreras/17-arquitectura-naval.php" target="_blank">+ info sobre Arquitectura</a>
-            </section>               
-            <section class="animate__animated animate__fadeInRightBig">
-                <h3>Mis habilidades</h3>
-                <ul>
-                    <li>Html <img src="../assets/icon/html5-line.svg" alt="html"></li>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
-                      </div>                     
-                    <li>CSS<img src="../assets/icon/css3-line.svg" alt="css"></li>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
-                    </div>                      
-                                       <li>Github<img src="../assets/icon/github-fill.svg" alt="github"></li>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
-                    </div>
-                    <li>Javascript<img src="../assets/icon/javascript_icon_153511.svg" alt="instagram"></li>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
-                    </div>
-                     <li>React<img  src="../assets/icon/reactjs-fill.svg" alt="react"></li>
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">20%</div>
-                    </div>
-            </section>
         </main>
         <footer>
             <div>
